add comparison page

--- a/public/translations/translations.json
+++ b/public/translations/translations.json
@@ -43,10 +43,10 @@
       "catalog": "Catalog",
       "buyers": "For buyers",
       "contacts": "Contacts",
-      "cloth": "Cloth",
-      "accessories": "Accessories",
-      "souvenirs": "Souvenirs",
-      "office": "Office",
+      "microgreen": "Microgreen",
+      "sprouts": "Sprouts",
+      "seeds": "Seeds",
+      "equipment": "Equipment",
       "all": "All catalog",
       "about": "About",
       "blog": "Blog",
@@ -56,17 +56,18 @@
       "vk": "VKontakte"
     },
     "comparison": {
-      "umbrella": "Umbrellas",
-      "bags": "Bags",
-      "outerwear": "Outerwear",
-      "long-sleeves": "Long-sleeves",
-      "headdress": "Headdress",
-      "hoodie": "Hoodie",
-      "business-souvenirs": "Business-souvenirs",
-      "promotional-souvenirs": "Promotional-souvenirs",
-      "pen": "Pens",
-      "notebook": "Notebooks",
-      "t-shirts": "T-shirts",
+      "radish": "Radish",
+      "cabbage": "Cabbage",
+      "sunflower": "Sunflower",
+      "peas": "Peas",
+      "arugulas": "Arugulas",
+      "buckwheat": "Buckwheat",
+      "chickpeas": "Chickpeas",
+      "wheat": "Wheat",
+      "box": "Box",
+      "lamps": "Lamps",
+      "shelf": "Shelf",
+      "agrovata": "Agrovata",
       "main_heading": "Comparison"
     },
     "breadcrumbs": {
@@ -100,10 +101,10 @@
       "hero_subtitle": "with the new “Line” collection",
       "catalog_btn": "Catalog",
       "category_title": "Categories",
-      "category_cloth": "Cloth",
-      "category_office": "Office",
-      "category_accessories": "Accessories",
-      "category_souvenirs": "Souvenirs",
+      "category_microgreen": "Microgreen",
+      "category_sprouts": "Sprouts",
+      "category_seeds": "Seeds",
+      "category_equipment": "Equipment",
       "bestsellers_title": "Bestsellers",
       "new_title": "New",
       "brand_title": "Life of our brand",
@@ -297,10 +298,10 @@
       "catalog": "Каталог",
       "buyers": "Покупателям",
       "contacts": "Контакты",
-      "cloth": "Одежда",
-      "accessories": "Аксесуары",
-      "souvenirs": "Сувениры",
-      "office": "Концелярия",
+      "microgreen": "Микрозелень",
+      "sprouts": "Проростки",
+      "seeds": "Семена",
+      "equipment": "Оборудование",
       "all": "Весь каталог",
       "about": "О нас",
       "blog": "Блог",
@@ -310,17 +311,18 @@
       "vk": "Вконтакте"
     },
     "comparison": {
-      "umbrella": "Зонты",
-      "bags": "Сумки",
-      "outerwear": "Верхняя одежда",
-      "long-sleeves": "Лонг-сливы",
-      "headdress": "Головные уборы",
-      "hoodie": "Худи",
-      "business-souvenirs": "Бизнес-сувениры",
-      "promotional-souvenirs": "Промо-сувениры",
-      "pen": "Ручки",
-      "notebook": "Тетради",
-      "t-shirts": "Футболки",
+      "radish": "Редис",
+      "cabbage": "Кольраби",
+      "sunflower": "Подсолнечник",
+      "peas": "Горох",
+      "arugulas": "Руккола",
+      "buckwheat": "Гречка",
+      "chickpeas": "Нут",
+      "wheat": "Пшеница",
+      "box": "Бокс",
+      "lamps": "Лампы",
+      "shelf": "Стеллажи",
+      "agrovata": "Агровата",
       "main_heading": "Сравнение"
     },
     "breadcrumbs": {
@@ -354,10 +356,10 @@
       "hero_subtitle": "с новой коллекцией «Line»",
       "catalog_btn": "Каталог",
       "category_title": "Категории",
-      "category_cloth": "Одежда",
-      "category_office": "Концелярия",
-      "category_accessories": "Аксесуары",
-      "category_souvenirs": "Сувениры",
+      "category_microgreen": "Микрозелень",
+      "category_sprouts": "Проростки",
+      "category_seeds": "Семена",
+      "category_equipment": "Оборудование",
       "bestsellers_title": "Хиты",
       "new_title": "Новинки",
       "brand_title": "Жизнь нашего бренда",
@@ -384,7 +386,7 @@
       "collection_goods": "Товары колекции",
       "watched": "Вы смотрели",
       "add_to_favorites": "Добавить в избранное",
-      "add_to_comparison": "Добавить в избранное",
+      "add_to_comparison": "Добавить в сравнение",
       "quick_view": "Быстрый просмотр",
       "total_in_cart": "Всего в корзине",
       "more": "Больше информации о товаре",
