create catalog page

--- a/public/translations/translations.json
+++ b/public/translations/translations.json
@@ -77,10 +77,10 @@
       "favorites": "Favorites",
       "catalog": "Catalog",
       "profile": "Profile",
-      "cloth": "Cloth",
-      "accessories": "Accessories",
-      "office": "Office",
-      "souvenirs": "Souvenirs",
+      "microgreen": "Microgreen",
+      "sprouts": "Sprouts",
+      "seeds": "Seeds",
+      "equipment": "Equipment",
       "order": "Placing an order",
       "personal_data_policy": "Data processing policy",
       "privacy_policy": "Privacy policy",
@@ -332,10 +332,10 @@
       "favorites": "Избранное",
       "catalog": "Каталог",
       "profile": "Профиль",
-      "cloth": "Одежда",
-      "accessories": "Аксесуары",
-      "office": "Концелярия",
-      "souvenirs": "Сувениры",
+      "microgreen": "Микрозелень",
+      "sprouts": "Проростки",
+      "seeds": "Семена",
+      "equipment": "Оборудование",
       "order": "Оформление заказа",
       "personal_data_policy": "Политика обработки данных",
       "privacy_policy": "Политика конфиденциальности",
